# Teaching_ML_Kaggle_Style

./: .gitignore  README.md  deployment.sh  dev-compose.yml  docker-compose.yml  logs.sh  requirements.txt
backend/: Dockerfile  clean_db.json  db.json  pyproject.toml  unit-config.json
backend/backend/: icl_settings.py  prod_settings.py  settings.py  urls.py
backend/classroom/: admin.py  models.py  serializers.py  test_db.py  test_ml.py  test_views.py  views.py
backend/classroom/migrations/: 0001_initial.py  0002_auto_20210305_2241.py  0003_auto_20210311_1546.py  0004_auto_20210314_0024.py  0005_auto_20210314_0034.py  0006_auto_20210329_1245.py  0007_participant_email.py  0008_cohort_is_active.py  0009_participant_final_submission.py  0010_auto_20210402_1303.py  0011_auto_20210402_1443.py  0012_auto_20210402_1448.py  0013_auto_20210402_1449.py  0014_auto_20210403_0827.py  0015_auto_20210403_1053.py  0016_auto_20210411_2036.py  0017_auto_20210514_1040.py
backend/classroom/templates/: add.html  landing_page 2.html
backend/ml_data/: CommViolPredUnnormalizedData_dependent.csv  CommViolPredUnnormalizedData_independent.csv  basic_test_framework_x_data.csv  basic_test_framework_x_val.csv  feature_arr  features 2  features_descriptions 2  unit_test_x_test 2.csv  unit_test_x_train 2.csv  unit_test_y_data.csv  unit_test_y_test 2.csv  unit_test_y_train.csv  unit_test_y_val 2.csv
backend/ml_models/: admin.py  models.py  serializers.py  test.py  test_views.py  util.py  views.py
backend/ml_tools/: data_load.py  model_export.py
backend/teaching-ml-env/Scripts/: activate  (+3 more)
(+110 files in other folders)
